fix blatant uncentred introduction look on small width screen(galaxy fold)

--- a/src/sass/_introduction.scss
+++ b/src/sass/_introduction.scss
@@ -45,6 +45,8 @@
 
       article {
         background-color: transparent !important;
+        margin-left: 0.4em !important;
+        margin-right: 0.4em !important;
       }
 
       &::after {
